--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div style="display:flex; flex-wrap:wrap; gap:10px;">
         <div>
           <label style="font-size:13px;">Bývanie (€)</label><br>
-          <input type="number" id="exp_housing" placeholder="napr. 0 / 250" />
+          <input type="number" id="exp_housing" placeholder="napr. 250" />
         </div>
         <div>
           <label style="font-size:13px;">Jedlo (€)</label><br>
