--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <input type="number" id="exp_fun" placeholder="napr. 120" />
         </div>
       </div>
-      <p style="margin:10px 0 0 0; font-size:13px; color:#555;">Tip: Ak nič nezadáš, zobrazí sa len odporúčané rozdelenie.</p>
+      <p style="margin:10px 0 0 0; font-size:13px; color:#555;">Ak nič nezadáš, zobrazí sa len odporúčané rozdelenie.</p>
     </div>
 
     <button class="btn" onclick="calculate()">Vypočítať rozpočet</button>
