--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- ✅ NOVÉ: poučka 40–30–20–10 -->
   <div class="box">
     <h2>Ideálne miery rozpočtu 40–30–20–10</h2>
-    <p><strong>Poučka:</strong> Ideálne je rozdeliť príjem tak, aby:</p>
+    <p> Ideálne je rozdeliť príjem tak, aby:</p>
     <ul>
       <li><strong>40 %</strong> išlo na bežné výdavky (bývanie, jedlo, doprava)</li>
       <li><strong>maximálne 30 %</strong> na splátky úverov</li>
